<resources>
    <string name="app_name">Agri Advisor</string>

    <!--code implemented-->
    <string name="action_sign_in_short">Register</string>
    <string name="username">User Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">AgrioT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in AgrioT now!</string>
    <string name="btn_link_to_login">Already registered. Login HERE!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="hint_confirm_password">Confirm Password</string>
    <string name="save">SAVE</string>
    <string name="logout">LOGOUT</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="streetaddress">Street Address</string>
    <string name="optionalstreetaddress">(optional)</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="title_activity_main">Agri Advisor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mydevice">My Devices</string>

    <string name="devicename">Device Name</string>
    <string name="battery_instructon">Keep the device in an open area for uninterrupted service.</string>
    <string name="title_activity_crop_details">cropDetails</string>
    <string name="info">Tune in for sensor data for efficient land preparation </string>
    <string name="home"> HOME </string>
    <string name="crop_suitability"> SUITABLE CROPS </string>
    <string name="crop_details"> CROP DETAILS </string>
    <string name="agri_stock"> AGRI STORE </string>
    <string name="add_device"> ADD DEVICE </string>
    <string name="confiqure_device"> CONFIQURE DEVICE </string>
</resources>
